# py-json-formatter

./: LICENSE  README.md  example_clean.json  example_messy.json  json_formatter.py  portfolio_2space.json  portfolio_formatted.json  portfolio_sorted.json  sample.json  sample_minified.json  setup.cfg  setup.py  test_json_formatter.py
