[metadata]
name = json-formatter
version = 1.0.0
description = A simple utility to format, validate, and minify JSON data
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/json-formatter
project_urls =
    Bug Reports = https://github.com/yourusername/json-formatter/issues
    Source = https://github.com/yourusername/json-formatter
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    json-formatter = json_formatter:main